[package]
name = "ritter_schwertlilie"
version = "0.1.0"
authors = ["hi_go <me@clutte.red>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dependencies.rust_dxlib]
git = "https://github.com/h1g0/rust_dxlib.git"
branch = "master"